<resources>
    <string name="app_name">Aqua2000<sup><small>®</small></sup>-i5</string>
    <string name="app_version">I5 APP Version1.0.6(20190701)</string>
    <string name="multi_menu">MENU</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="multi_suntech_eng">Suntech Engineering Co.</string>
    <string name="multi_please_select_sensor">Please Select Sensor</string>
    <string name="multi_turbidity">Turbidity</string>
    <string name="multi_chlorine">Chlorine</string>
    <string name="multi_ph">pH</string>
    <string name="multi_temperature">Temperature</string>
    <string name="multi_conductivity">Conductivity</string>
    <string name="multi_normal_flow">Normal Flow</string>
    <string name="multi_check_flow">Check Flow</string>
    <string name="multi_setup">Setup</string>
    <string name="multi_calibration">Calibration</string>
    <string name="multi_output">Output</string>
    <string name="multi_wash">Flush</string>
    <string name="multi_trend">Trend</string>
    <string name="multi_diagnosis">Diagnosis</string>
    <string name="multi_detaildiagnosis">Detailed Diagnostics</string>
    <string name="multi_serial">Serial</string>
    <string name="multi_serial_standard">Serial Standard</string>
    <string name="multi_baud_rate">Baud Rate</string>
    <string name="multi_stop_bit">Stop Bit</string>
    <string name="multi_parity">Parity</string>
    <string name="multi_station_number">Station Number</string>
    <string name="multi_data_bit">Data Bit</string>
    <string name="multi_protocol">Protocol</string>
    <string name="multi_ethernet">Ethernet</string>
    <string name="multi_ip_address">IP Address</string>
    <string name="multi_subnet_mask">Subnet Mask</string>
    <string name="multi_gateway">Gateway</string>
    <string name="multi_port">Port</string>
    <string name="multi_pair_list">Pair List</string>
    <string name="multi_bluetooth">BlueTooth</string>
    <string name="multi_system">System</string>
    <string name="multi_product_serial_number">Product Serial Number</string>
    <string name="multi_ph_serial_number">pH Serial Number</string>
    <string name="multi_chlorine_serial_number">Chlorine Serial Number</string>
    <string name="multi_turbidity_serial_number">Turbidity Serial Number</string>
    <string name="multi_conductivity_serial_number">Conductivity Serial Number</string>
    <string name="multi_additional_function">Additional Function</string>
    <string name="multi_item_replacement">Items Replacement</string>
    <string name="multi_item_expire_date">Expire Date</string>
    <string name="multi_replacement_history">Replacement History</string>
    <string name="multi_recommended_date">Recommended Date</string>
    <string name="multi_notification_date">Notification Date</string>
    <string name="multi_complete_replacement">Complete Replacement</string>
    <string name="multi_filter_deviation">Filter Deviation</string>
    <string name="multi_filter_window">Filter Window</string>
    <string name="multi_range_high">Range High</string>
    <string name="multi_range_low">Range Low</string>
    <string name="multi_calibration_date">Calibration Date</string>
    <string name="multi_calibration_method">Calibration Method</string>
    <string name="multi_analog_setup">Analog Setup</string>
    <string name="multi_range_setting">Range Setting</string>
    <string name="multi_analog_output">Analog Output Adjustment</string>
    <string name="multi_digital_setup">Digital Setup</string>
    <string name="multi_setting_date">Setting Date</string>
    <string name="multi_standard">Standard</string>
    <string name="multi_measured">Measured</string>
    <string name="multi_std_rate">Std. rate(%)</string>
    <string name="multi_change">Change</string>
    <string name="multi_high_alarm">High Alarm(HH)</string>
    <string name="multi_low_alarm">Low Alarm(LL)</string>
    <string name="multi_relay_selection">Relay Selection</string>
    <string name="multi_phase">Phase</string>
    <string name="multi_dead_band">Dead band</string>
    <string name="multi_on_delay">On-Delay</string>
    <string name="multi_set_point">Set Point</string>
    <string name="multi_off_delay">Off-Delay</string>
    <string name="multi_relay">Relay</string>
    <string name="multi_interval">Interval</string>
    <string name="multi_duration">Duration</string>
    <string name="multi_stabilization">Stabilization</string>
    <string name="multi_auto">Auto</string>
    <string name="multi_high">High</string>
    <string name="multi_low">Low</string>
    <string name="multi_manual">Manual</string>
    <string name="multi_hold_measurement">Hold Measurement</string>
    <string name="multi_min">Min.</string>
    <string name="multi_sec">Sec.</string>
    <string name="multi_x_zoom_in_out">X Zoom In,Out</string>
    <string name="multi_previous_data">Previous data</string>
    <string name="multi_second_previous">Second (Previous)</string>
    <string name="multi_minute_previous">Minute (Previous)</string>
    <string name="multi_hour_previous">Hour (Previous)</string>
    <string name="multi_sensor_diagnosis">Sensor Diagnosis</string>
    <string name="multi_sensor_check">Sensor Check</string>
    <string name="multi_no">No.</string>
    <string name="multi_sensor">Sensor</string>
    <string name="multi_value">Value</string>
    <string name="multi_thresholds">Thresholds</string>
    <string name="multi_confirmation">Confirmation</string>
    <string name="multi_alarm_history">Alarm History</string>
    <string name="multi_sensor_type">Sensor Type</string>
    <string name="multi_connection">Connection</string>
    <string name="multi_date_and_time">Date and Time</string>
    <string name="multi_turbidity_diagnosis">Turbidity Diagnosis</string>
    <string name="multi_lamp_off_volt">Lamp Off Volt.</string>
    <string name="multi_previous">Previous</string>
    <string name="multi_tu_light">Turbidity Light</string>
    <string name="multi_detector">Detector</string>
    <string name="multi_lamp">Lamp</string>
    <string name="multi_measurement">Measurement</string>
    <string name="multi_1point_buffer">1Point Buffer</string>
    <string name="multi_2point_buffer">2Point Buffer</string>
    <string name="multi_1point_sample">1Point Sample</string>
    <string name="multi_2point_sample">2Point Sample</string>
    <string name="multi_current">Current</string>
    <string name="multi_data_filter">Data Filter</string>
    <string name="multi_filter">Filter</string>
    <string name="multi_temperature_electrode">Temperature Electrode</string>
    <string name="multi_temperature_select">Temperature Electrode</string>
    <string name="multi_systemtime">System Time</string>
    <string name="multi_calibration_history">Calibration History</string>
    <string name="multi_fixed_ph">Fixed pH</string>
    <string name="multi_current_ph">Current pH</string>
    <string name="multi_ph_compensation">pH Compensation</string>
    <string name="multi_zero">Zero</string>
    <string name="multi_verification">Verification</string>
    <string name="multi_stick_no">Stick No</string>
    <string name="multi_on">On</string>
    <string name="multi_off">Off</string>
    <string name="multi_in">In</string>
    <string name="multi_out">Out</string>
    <string name="multi_edit">Edit</string>
    <string name="multi_help">Help</string>
    <string name="multi_stop">Stop</string>
    <string name="multi_factory_reset">Factory Reset</string>
    <string name="multi_hold">Hold</string>
    <string name="multi_load">Load</string>
    <string name="multi_cancel">Cancel</string>
    <string name="multi_apply">Apply</string>
    <string name="multi_search">Search</string>
    <string name="multi_connect">Connect</string>
    <string name="multi_disconnect">Disconnect</string>
    <string name="multi_btenable">BT Enable</string>
    <string name="multi_btdisable">BT Disable</string>
    <string name="multi_delete_all">Delete All</string>
    <string name="multi_delete">Delete</string>
    <string name="multi_download">Download</string>
    <string name="multi_excel">Excel</string>
    <string name="multi_registration">Registration</string>
    <string name="multi_meas">Meas</string>
    <string name="multi_main">MainActivity</string>
    <string name="multi_cal_ch">Calibration > Chlorine </string>
    <string name="multi_cal_ch_1p_sample">Calibration > Chlorine > 1Point Sample</string>
    <string name="multi_cal_ch_cal_hist">Calibration > Chlorine > Calibration History</string>
    <string name="multi_cal_ch_filter">Calibration > Chlorine > Filter</string>
    <string name="multi_cal_ch_ph_comp">Calibration > Chlorine > pH Compensation</string>
    <string name="multi_cal_ch_temp_ele">Calibration > Chlorine > Temperature Electrode</string>
    <string name="multi_cal_ch_zero">Calibration > Chlorine > Zero</string>
    <string name="multi_cal_co">Calibration > Conductivity</string>
    <string name="multi_cal_co_1p_sample">Calibration > Conductivity > 1Point Sample</string>
    <string name="multi_cal_co_cal_hist">Calibration > Conductivity > Calibration History</string>
    <string name="multi_cal_co_filter">Calibration > Conductivity > Filter</string>
    <string name="multi_cal_co_temp_ele">Calibration > Conductivity > Temperature Electrode</string>
    <string name="multi_cal_co_zero">Calibration > Conductivity > Zero</string>
    <string name="multi_cal_ph">Calibration > pH </string>
    <string name="multi_cal_ph_1p_buffer">Calibration > pH > 1Point Buffer</string>
    <string name="multi_cal_ph_1p_sample">Calibration > pH > 1Point Sample</string>
    <string name="multi_cal_ph_2p_buffer">Calibration > pH > 2Point Buffer</string>
    <string name="multi_cal_ph_2p_sample">Calibration > pH > 2Point Sample</string>
    <string name="multi_cal_ph_cal_hist">Calibration > pH > Calibration History</string>
    <string name="multi_cal_ph_filter">Calibration > pH > Filter</string>
    <string name="multi_cal_ph_temp_ele">Calibration > pH > Temperature Electrode</string>
    <string name="multi_cal_tu">Calibration > Turbidity</string>
    <string name="multi_cal_tu_1p_sample">Calibration > Turbidity > 1Point Sample</string>
    <string name="multi_cal_tu_cal_hist">Calibration > Turbidity > Calibration History</string>
    <string name="multi_cal_tu_filter">Calibration > Turbidity > Filter</string>
    <string name="multi_cal_tu_temp_ele">Calibration > Turbidity > Temperature Electrode</string>
    <string name="multi_cal_tu_ver">Calibration > Turbidity > Verification</string>
    <string name="multi_cal_tu_zero">Calibration > Turbidity > Zero</string>
    <string name="multi_dia_alarm_history"> Diagnosis > Alarm History</string>
    <string name="multi_dia_sensor_dia"> Diagnosis > Sensor Diagnosis</string>
    <string name="multi_dia_sensor_check"> Diagnosis > Sensor Check</string>
    <string name="multi_dia_tu_dia"> Diagnosis > Turbidity Diagnosis</string>
    <string name="multi_output_ch"> Output > Chlorine </string>
    <string name="multi_output_ch_analog"> Output > Chlorine > Analog Setup</string>
    <string name="multi_output_ch_digital"> Output > Chlorine > Digital Setup</string>
    <string name="multi_output_co"> Output > Conductivity</string>
    <string name="multi_output_co_analog"> Output > Conductivity > Analog Setup</string>
    <string name="multi_output_co_digital"> Output > Conductivity > Digital Setup</string>
    <string name="multi_setup_addition"> Setup > Additional Function</string>
    <string name="multi_temp1">Temperature</string>
    <string name="multi_trend_data"> Trend > Data Delete</string>
    <string name="multi_all_data_are_deleted">All data are deleted.</string>
    <string name="multi_alarm_status">Alarm Status</string>
</resources>