<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c2d35" >

    <LinearLayout
        android:id="@+id/Diagno_AH_Content"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">
        <TextView
            android:id="@+id/Diagno_AH_Content_Text"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/multi_dia_alarm_history"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_weight="100"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Diagno_AH_Column"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="10">
        <!--<TextView-->
            <!--android:id="@+id/Diagno_AH_Column_Text_No"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="fill_parent"-->
            <!--android:text="@string/multi_no"-->
            <!--android:gravity="center"-->
            <!--android:textColor="#FFFFFF"-->
            <!--android:textSize="15sp"-->
            <!--android:background="#1f2026"-->
            <!--android:layout_weight="25"/>-->
        <TextView
            android:id="@+id/Diagno_AH_Column_Text_Date"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/multi_date_and_time"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:background="#1f2026"
            android:layout_weight="30"/>
        <TextView
            android:id="@+id/Diagno_AH_Column_Text_Sensor"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/multi_sensor_type"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:background="#1f2026"
            android:layout_weight="20"/>
        <TextView
            android:id="@+id/Diagno_AH_Column_Text_Connection"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/multi_connection"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:background="#1f2026"
            android:layout_weight="24"/>
        <TextView
            android:id="@+id/Diagno_AH_Column_Text_Status"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/multi_alarm_status"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:background="#1f2026"
            android:layout_weight="26"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Diagno_AH_List"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="70">

        <ListView
            android:id="@+id/Diagno_AH_List_List"
            android:layout_weight="100"
            android:layout_width="70dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#1a1b20" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Diagno_AH_Option1"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">

        <Button
            android:id="@+id/Diagno_AH_Option1_Load"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="33"
            android:background="@drawable/my_button_base"
            android:text="@string/multi_load"
            android:textColor="#FFFFFF"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/Diagno_AH_Option2_Empty"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text=""
            android:padding="10dp"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="33"/>
        <!--<Button-->
            <!--android:id="@+id/Diagno_AH_Option1_Help"-->
            <!--android:text="@string/multi_help"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="fill_parent"-->
            <!--android:textSize="12sp"-->
            <!--android:layout_weight="33"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:textColor="#FFFFFF"-->
            <!--android:background="@drawable/my_button_base" />-->
        <Button
            android:id="@+id/Diagno_AH_Option1_DeleteAll"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="33"
            android:background="@drawable/my_button_base"
            android:text="@string/multi_delete_all"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>