<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Setup_Add"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/Setup_Add_Content"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:id="@+id/Setup_Add_Content_Text"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/multi_setup_addition"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_weight="100"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Setup_Add_Sensor1"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">


        <CheckBox
            android:id="@+id/Setup_Add_Sensor_Check_PH"
            android:text="@string/multi_ph"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="#FFFFFF"
            android:gravity="center_vertical"
            android:textSize="10sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"

            android:layout_weight="33" />

        <CheckBox
            android:id="@+id/Setup_Add_Sensor_Check_TU"
            android:text="@string/multi_turbidity"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="#FFFFFF"
            android:gravity="center_vertical"
            android:textSize="10sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="33" />


        <CheckBox
            android:id="@+id/Setup_Add_Sensor_Check_CO"
            android:text="@string/multi_conductivity"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="#FFFFFF"
            android:gravity="center_vertical"
            android:textSize="10sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"

            android:layout_weight="34" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Setup_Add_Sensor2"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">


        <CheckBox
            android:id="@+id/Setup_Add_Sensor_Check_CH"
            android:text="@string/multi_chlorine"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="#FFFFFF"
            android:gravity="center_vertical"
            android:textSize="10sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="33" />

        <CheckBox
            android:id="@+id/Setup_Add_Sensor_Check_TEMP"
            android:text="@string/multi_temp1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="#FFFFFF"
            android:gravity="center_vertical"
            android:textSize="10sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="33" />

        <TextView
            android:id="@+id/Setup_Add_Text_Dummy"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_weight="34"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Setup_Add_Dummy1"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Setup_Add_Tu_Light"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">


        <CheckBox
            android:id="@+id/Setup_Add_Tu_Light_Check"
            android:text="@string/multi_tu_light"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="#FFFFFF"
            android:gravity="center_vertical"
            android:textSize="10sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="33" />


        <TextView
            android:id="@+id/Setup_Add_Tu_Light_Dummy1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_weight="34"/>


        <TextView
            android:id="@+id/Setup_Add_Tu_Light_Dummy2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_weight="34"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/Setup_Add_Dummy2"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Setup_Add_Dummy3"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Setup_Add_Dummy4"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Setup_Add_Dummy5"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Setup_Add_Option1"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">
        <Button
            android:id="@+id/Setup_Add_Option1_FactoryReset"
            android:text="@string/multi_factory_reset"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="33"
            android:textSize="10sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/my_button_red" />

        <TextView
            android:id="@+id/Setup_Add_Option1_Empty"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text=""
            android:padding="10dp"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="33"/>

        <Button
            android:id="@+id/Setup_Add_Option1_Apply"
            android:text="@string/multi_apply"
            android:textSize="10sp"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="33"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/my_button_green" />
    </LinearLayout>

</LinearLayout>