<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c2d35" >

    <LinearLayout
        android:id="@+id/Trend_DD_Content"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">
        <TextView
            android:id="@+id/Trend_DD_Content_Text"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/multi_trend_data"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_weight="100"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Trend_DD_Dummy1"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Trend_DD_Dummy2"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Trend_DD_Dummy3"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Trend_DD_Title1"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">
        <TextView
            android:id="@+id/Trend_DD_Title1_Text"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/multi_all_data_are_deleted"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_weight="100"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Trend_DD_Title2"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">
        <TextView
            android:id="@+id/Trend_DD_Title2_Text"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text=""
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_weight="100"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Trend_DD_Dummy4"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Trend_DD_Dummy5"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Trend_DD_Dummy6"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Trend_DD_Option1"
        android:orientation="horizontal"
        android:background="#2c2d35"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="10">
        <TextView
            android:id="@+id/Trend_DD_Option1_Empty"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text=""
            android:padding="10dp"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="66"/>
        <!--<Button-->
            <!--android:id="@+id/Trend_DD_Option1_Cancel"-->
            <!--android:text="@string/multi_cancel"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="fill_parent"-->
            <!--android:layout_weight="33"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:textColor="#FFFFFF"-->
            <!--android:background="@drawable/my_button_base" />-->
        <Button
            android:id="@+id/Trend_DD_Option1_Delete"
            android:text="@string/multi_delete"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="33"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/my_button_red" />
    </LinearLayout>
</LinearLayout>